--- a/weddingOrganizer/templates/base.html
+++ b/weddingOrganizer/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Our Funky HTML Page</title>
+    <title>Wedding Organizer</title>
     <meta name="description" content="Our first page">
     <meta name="keywords" content="html tutorial template">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
