--- a/guests_management/templates/add_table.html
+++ b/guests_management/templates/add_table.html
@@ -1,30 +1,51 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-<div class="d-flex justify-content-centre">
+<div class="d-flex justify-content-center">
     <div>
         <h1>Add new table</h1>
         <form action="" method="POST">
-              {% csrf_token %}
-              <div class="form-group">
-                  <label for="table_name_field">Table name</label>
-                  <input type="text" class="form-control" id="table_name_field" placeholder="Enter table name"
-                         value="{{ tableName }}" required>
-              </div>
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="table_name_field">Table name</label>
+                <input type="text" class="form-control" id="table_name_field" name="table_name" placeholder="Enter table name"
+                       value="{{ tableName }}" required>
+            </div>
 
-              <div class="form-group">
-                  <label for="description_field">Description</label>
-                  <input type="text" class="form-control" id="description_field" placeholder="Provide more information about that table"
-                         value="{{ description }}"  required>
-              </div>
+            <div class="form-group">
+                <label for="description_field">Description</label>
+                <input type="text" class="form-control" id="description_field" name="description"
+                       placeholder="Provide more information about that table" value="{{ description }}" required>
+            </div>
 
-              <div class="form-group">
-                  <label for="number_of_seats_field">Number Of Seats</label>
-                  <input type="number" class="form-control" id="number_of_seats_field" placeholder="Enter number of seats"
-                         value="{{ numberOfSeats }}" required>
-              </div>
+            <div class="form-group">
+                <label for="number_of_seats_field">Number Of Seats</label>
+                <input type="number" class="form-control" id="number_of_seats_field" name="number_of_seats"
+                       placeholder="Enter number of seats" value="{{ numberOfSeats }}" required>
+            </div>
 
-              <button type="submit" class="btn btn-secondary">Add</button>
+            <button type="submit" class="btn btn-secondary">Add</button>
+
+            {% if afterAdd %}
+            <p class="confirmation_container container">
+                Stolik {{ AddedTableName }} został poprawie dodany do listy stolików.
+            </p>
+            {% endif %}
+
+            {% if tableExist %}
+            <p class="error_container container">
+                Stolik {{ tableName }} już jest na liście!
+            </p>
+            {% endif %}
+
+            {% if errorTable %}
+            <div class="validation_error_container container">
+                {{ errorList }}
+            </div>
+            {% endif %}
+
         </form>
     </div>
 </div>
+
+{% endblock %}
