--- a/weddingOrganizer/templates/navbar.html
+++ b/weddingOrganizer/templates/navbar.html
@@ -26,6 +26,8 @@
                     Table
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{% url 'table-list' %}">Table list</a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'form-add-new-table' %}">Add new table</a>
                 </div>
             </li>
