--- a/guests_management/templates/delete.html
+++ b/guests_management/templates/delete.html
@@ -9,12 +9,12 @@
         </button>
       </div>
         <div class="modal-body">
-                 <p>Are you sure you want to delete {{ table.table_name }}?</p>
+                 <p></p>
 
              </div>
              <div class="modal-footer">
-                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Delete</button>
+                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" data-type="delete-table" class="btn btn-primary">Delete</button>
              </div>
     </div>
   </div>
