feat: edit and delete guest

--- a/guests_management/templates/add_guest.html
+++ b/guests_management/templates/add_guest.html
@@ -34,13 +34,13 @@
 
     {% if afterAdd %}
     <p class="confirmation_container container">
-        Gość {{ addedGuestName }} został dodany poprawnie do listy gości.
+        Guest {{ addedGuestName }} is correctly added to the guest list.
     </p>
     {% endif %}
 
     {% if guestExist %}
     <p class="error_container container">
-        Gość {{ guestName }} {{ guestSurname }} już jest na liście!
+        Gość {{ guestName }} {{ guestSurname }} is already on the guest list!
     </p>
     {% endif %}
 
