--- a/guests_management/templates/table_list.html
+++ b/guests_management/templates/table_list.html
@@ -24,7 +24,8 @@
             <td><a href="{% url 'one-table-form' table.pk %}" class="btn btn-primary btn-sm active"
                    role="button" aria-pressed="true">Edit</a></td>
             <td><button type="button" class="btn btn-secondary btn-sm active"
-                   role="button" aria-pressed="true " data-type="delete" data-table-id="{{ table.id }}" data-table-name="{{ table.table_name }}">Delete</button></td>
+                        role="button" aria-pressed="true " data-type="delete" data-table-id="{{ table.id }}"
+                        data-table-name="{{ table.table_name }}">Delete</button></td>
         </tr>
         {% endfor %}
     </thead>
