fix: delete guest

--- a/guests_management/templates/guest_list.html
+++ b/guests_management/templates/guest_list.html
@@ -26,7 +26,7 @@
                    role="button" aria-pressed="true">Edit</a></td>
             <td><button type="button" class="btn btn-secondary btn-sm active"
                         role="button" aria-pressed="true " data-type="delete" data-guest-id="{{ guest.id }}"
-                        data-guest-name="{{ guest.name }}">Delete</button></td>
+                        data-guest-name="{{ guest.name }}" data-guest-surname="{{ guest.surname }}">Delete</button></td>
         </tr>
         {% endfor %}
      </thead>
