--- a/guests_management/templates/delete.html
+++ b/guests_management/templates/delete.html
@@ -14,7 +14,7 @@
              </div>
              <div class="modal-footer">
                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" data-type="delete-table" class="btn btn-primary">Delete</button>
+                <button type="button" data-type="delete-element" class="btn btn-primary">Delete</button>
              </div>
     </div>
   </div>
