feat: create, edit, delete seats

--- a/guests_management/templates/add_table.html
+++ b/guests_management/templates/add_table.html
@@ -44,7 +44,7 @@
             {% if afterAdd %}
                 {% if isInEditMode %}
                     <p class="confirmation_container container">
-                        The {{ addedTableName }} is correctly edited.
+                        The {{ tableName }} is correctly edited.
                 </p>
                 {% else %}
                     <p class="confirmation_container container">
