feat: create, edit seatings

--- a/guests_management/templates/add_guest.html
+++ b/guests_management/templates/add_guest.html
@@ -40,7 +40,7 @@
 
     {% if guestExist %}
     <p class="error_container container">
-        Gość {{ guestName }} {{ guestSurname }} is already on the guest list!
+        Guest {{ guestName }} {{ guestSurname }} is already on the guest list!
     </p>
     {% endif %}
 
