--- a/weddingOrganizer/templates/navbar.html
+++ b/weddingOrganizer/templates/navbar.html
@@ -23,12 +23,22 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
-                    Table
+                    Tables
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'table-list' %}">Table list</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'form-add-new-table' %}">Add new table</a>
+                </div>
+            </li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    Seatings
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{% url 'add-seating' %}">Assign guest to the seat</a>
                 </div>
             </li>
 
