--- a/guests_management/templates/edit_guest.html
+++ b/guests_management/templates/edit_guest.html
@@ -39,8 +39,8 @@
         <p class="confirmation_container container">
             Guest {{ addedGuestName }} {{ addedGuestSurname }} is correctly edited.
         </p>
-        <td><a href="{% url 'guest-list' %}" class="btn btn-secondary btn-lg active"
-               role="button" aria-pressed="true">Back to Guest list</a></td>
+        <a href="{% url 'guest-list' %}" class="btn btn-secondary btn-lg active"
+               role="button" aria-pressed="true">Back to Guest list</a>
         {% endif %}
 
         {% if guestExist %}
