--- a/guests_management/templates/table_list.html
+++ b/guests_management/templates/table_list.html
@@ -29,11 +29,11 @@
             <td>{{ table.table_name }}</td>
             <td>{{ table.description }}</td>
             <td>{{ table.number_of_seats }}</td>
-            <td><a href="{% url 'one-table-form' table.pk %}" class="btn btn-primary btn-sm active"
-                   role="button" aria-pressed="true">Edit</a></td>
+            <td><a href="{% url 'one-table-form' table.pk %}" class="btn btn-primary btn-sm action-button"
+                   role="button" >Edit</a></td>
             <td>
-                <button type="button" class="btn btn-secondary btn-sm active"
-                        role="button" aria-pressed="true " data-type="delete"
+                <button type="button" class="btn btn-danger btn-sm action-button"
+                        role="button"  data-type="delete"
                         data-table-id="{{ table.id }}"
                         data-table-name="{{ table.table_name }}">Delete
                 </button>
@@ -41,7 +41,7 @@
         </tr>
         <tr class="hide-table-padding">
             <td colspan="6">
-                <div id="collapse{{ table.id }}" class="collapse in p-3">
+                <div id="collapse{{ table.id }}" class="in p-3">
                     <table class="table table-striped">
                         <thead>
                         <tr>
@@ -69,7 +69,7 @@
                             </td>
                             <td>
                             <a href="{% url 'delete-seating' seat.seating_id %}"
-                               class="btn btn-primary btn-sm active"
+                               class="btn btn-danger btn-sm active"
                                role="button" aria-pressed="true">Delete</a>
                             </td>
                             {% else %}
@@ -99,10 +99,11 @@
 <!--Modal js-->
 <script src="{% static 'js/delete.js' %}"
 ></script>
-<script
-        type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js"
-></script>
+
+<!--<script-->
+<!--        type="text/javascript"-->
+<!--        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js"-->
+<!--&gt;</script>-->
 
 
 <style>
